# protos-vmccopilot

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  VMCCopilot.nuspec.in  default.css  vmcCopilot.cpp  vmcCopilot.h  vmcCopilot.qrc  vmcCopilot.ui  vmcCopilotExport.h  vmcCopilotNetwork.cpp  vmcCopilotNetwork.h
data/: answer.html  fsqna.pptx  fsqnaoa.prompty
data/fg/01_04_Quickstart/: Chapter_Quickstart_en.html
data/fg/01_05_Modelling_basics/: Chapter_Modelling_basics_en.html
data/fg/01_06_Program_design/: Chapter_Program_design_en.html
data/fg/01_06_Program_design/images/: _images.pptx
docs/: VMC Hackathon 2024 - VMC.Chatbot - Demo.pptx  VMC Hackathon 2024 - VMC.Chatbot - KB.pptx  VMC.Chatbot 2024.txt
docs/clipchamp/: VMC.Copilot.clipchamp
docs/clipchamp/Assets/: follow-up-prompts.mkv  openai-ask-in-german.mkv  private-knowledge.mkv  show-ui-item.mkv
docs/communications/: VMCChatbot Technology Alignment with Steve 20240808.txt  VMCChatbot with Jessica 20240808.txt
pilots/: app.py  prep.py  utils.py
pilots/tests/: test_chunking.py  test_embedding.py
scripts/: deploy.ps1
